--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,21 @@
   --font-size-large: 60px;
   --font-size-medium: 20px;
   --transition: all .2s ease-in-out;
+  --bg-color: #FFF;
+  --title-color:#3a3f58;
+
+}
+
+[data-theme="dark"] {
+  --bg-color: #161625;
+  --title-color:#D2D2D2;
 }
 
 /* main */
 
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Goldman','Montserrat', sans-serif;
 }
 
 body {
@@ -28,6 +36,7 @@ body {
   flex-direction: column;
   display: flex;
   height: 100vh;
+  background-color: var(--bg-color);
 }
 
 li, ol, ul {
@@ -60,10 +69,69 @@ button {
   cursor: pointer;
 }
 
+/* 
+========================
+Start Button animations
+Author: Natalia Reshetnikova
+Url: https://codepen.io/natalia-reshetnikova/pen/oRRjPP
+========================
+*/
 #btn__reset {
-	width: 200px;
-	margin: 0 auto;
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  cursor: pointer;
+  width: 200px;
+  margin: 0 auto;
+  -webkit-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+  position: relative;
 }
+#btn__reset span {
+  transition: all 0.1s;
+}
+#btn__reset::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(255,255,255,0.5);
+  border-bottom-color: rgba(255,255,255,0.5);
+  transform: scale(0.1, 1);
+}
+#btn__reset:hover span {
+  letter-spacing: 2px;
+}
+#btn__reset:hover::before {
+  opacity: 1; 
+  transform: scale(1, 1); 
+}
+#btn__reset::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.3s;
+  background-color: rgba(255,255,255,0.1);
+}
+#btn__reset:hover::after {
+  opacity: 0; 
+  transform: scale(0.1, 1);
+}
+
 
 .main-container {
   display: flex;
@@ -86,7 +154,7 @@ button {
 /* Title */
 
 .header {
-  color: #3a3f58;
+  color: var(--title-color);
 }
 
 
@@ -106,7 +174,6 @@ button {
 .space {
   width: 15px;
 }
-
 
 
 .show {
@@ -187,6 +254,18 @@ button {
   color: #fff;
 }
 
+/* Start game overlay animation */
+
+.startFadeout {
+  animation: fadeOut 1s linear forwards;
+}
+
+@keyframes fadeOut {
+  0% { opacity:1; }
+  50% { opacity:0.5; } 
+  100% { opacity:0; } 
+ }
+
 .win {
   background-color: var(--color-win);
 }
@@ -196,9 +275,73 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: var(--color-lose);
 }
 
 .lose a {
   color: var(--color-lose);
+}
+
+/* Dark mode toggle switch styling */
+/* Code from https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8 */
+
+/*Simple css to style it like a toggle switch*/
+.theme-switch-wrapper {
+  display: none;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.theme-switch-wrapper em {
+  margin-right: 10px;
+  font-size: 1rem;
+  color: var(--title-color);
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #66bb6a;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
